prevent page jumping on alert

--- a/app/assets/stylesheets/main.less
+++ b/app/assets/stylesheets/main.less
@@ -31,3 +31,7 @@
      border-color: orange;
 
 }
+
+.white-space {
+  height: 50px;
+}
